--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,12 +1,40 @@
 ---
 layout: archive
-title: "Publications"
+title: "Publications & Working Papers"
 permalink: /publications/
 author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">
+    <h2>Working papers (titles subject to change)</h2>
+<ul>
+  <li>Yanying Wang&#8224;, Yana Jin, and Shiqiu Zhang. Preferences for reducing air pollution health risks increase after substantial air quality improvement.</li>
+  <li>Tingwei Gao&#8224;, Cheng Fang&#8224;, and Yana Jin. The impact of wastewater treatment plants on residential property values: A hedonic price analysis.</li>
+  <li>Shunlin Jin&#8224;, Yana Jin, Xianling Long, and Shiqiu Zhang. Transition to solar power prosumers: Climate change and rural residential rooftop PV diffusion.</li>
+  <li>Yana Jin, Henrik Andersson, and Shiqiu Zhang. Willingness to pay to reduce health risks of air pollution the effect from survey mode and current air quality.</li>
+  <li>Yana Jin, Dan Maliniak, and S.P Harish. To everything there is a season: The effect of air pollution on public opinion in China.</li>
+  <li>Xing Chen, Yana Jin, Jianhua Xu, and Jiakun Zheng. The dynamics of public opinion on COVID-19 policies in China.</li>
+  <li>Yana Jin. Self-protection and willingness to pay for clean air policies.</li>
+</ul>
+<p>Notation: &#8224; indicates a student coauthor, * the corresponding author, and &#167; equal contribution.</p>
+<h2>Selected peer-reviewed articles</h2>
+<h3>Environmental Economics</h3>
+<ul>
+  <li>Yanying Wang&#8224;, Yana Jin*, Huan Lin, Wei Wan, and Shiqiu Zhang. Valuing mortality risk reductions in a fast-developing society: A meta-analysis of stated preference studies in China from 1998 to 2019. <em>Social Science & Medicine</em>, 2024.</li>
+  <li>Yana Jin*, Henrik Andersson, and Shiqiu Zhang. Do preferences to reduce health risks related to air pollution depend on illness type? Evidence from a choice experiment in Beijing, China. <em>Journal of Environmental Economics and Management</em>, 2020.</li>
+  <li>Yana Jin, Xiaorui Liu&#8224;, Xiang Chen&#8224;, and Hancheng Dai*. Allowance allocation matters in China’s carbon emissions trading system. <em>Energy Economics</em>, 2020.</li>
+  <li>Chiara Ravetti*, Tim Swanson, Yana Jin, Quan Mu, and Shiqiu Zhang. A dragon eating its own tail: public control of air pollution information in China. <em>Environment and Development Economics</em>, 2019.</li>
+</ul>
+<h3>Environmental Policy</h3>
+<ul>
+  <li>Song Xiao&#167;, Yuting Yang*&#167;, Yubei Li&#8224;, Jingtong Lin&#8224;, and Yana Jin*&#167;. Decarbonizing the non-carbon: Benefit-cost analysis of phasing out the most potent GHG in interconnected power grids. <em>Environmental Science & Technology</em>, 2025.</li>
+  <li>Yana Jin*, Wei Peng, and Johannes Urpelainen. An ultra-low emission coal power fleet for cleaner but not hotter air. <em>Environmental Research Letters</em>, 2020.</li>
+  <li>Xiang Zhang&#8224;, Yana Jin*, Hancheng Dai*, Yang Xie, and Shiqiu Zhang. Health and economic benefits of cleaner residential heating in the Beijing–Tianjin–Hebei region in China. <em>Energy Policy</em>, 2019.</li>
+  <li>Yana Jin, Henrik Andersson, and Shiqiu Zhang*. China’s Cap on Coal and the efficiency of local interventions: A benefit-cost analysis of phasing out coal in power plants and in households in Beijing. <em>Journal of Benefit-Cost Analysis</em>, 2017.</li>
+  <li>Yana Jin, Henrik Andersson, and Shiqiu Zhang*. Air pollution control policies in China: a retrospective and prospects. <em>International journal of environmental research and public health</em>, 2016.</li>
+</ul>
+  </div>
 {% endif %}
 
 {% include base_path %}
