--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -37,9 +37,13 @@ author_profile: true
   </div>
 {% endif %}
 
+<!-- 注释单篇文章示例 -->
+<!--
 {% include base_path %}
+-->
 
 <!-- New style rendering if publication categories are defined -->
+ <!--
 {% if site.publication_category %}
   {% for category in site.publication_category  %}
     {% assign title_shown = false %}
@@ -59,6 +63,6 @@ author_profile: true
     {% include archive-single.html %}
   {% endfor %}
 {% endif %}
-
+-->
 
 
