--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Publications & Working Papers"
+title: "Publications and Working Papers"
 permalink: /publications/
 author_profile: true
 ---
